# gawsel

./: .gitignore  README.md  package-lock.json
Next.js/: .gitignore  README.md
Next.js/LightsOut/: README.md  package-lock.json
Next.js/LightsOut/components/: LightsOutBoard.tsx  LightsOutCell.tsx  LightsOutGame.module.css  LightsOutGame.tsx  LightsOutMenuBar.tsx
Next.js/LightsOut/components/LightsOutBoard/: LightsOutBoard.module.css  LightsOutBoard.tsx
Next.js/LightsOut/components/LightsOutCell/: LightsOutCell.module.css
Next.js/LightsOut/components/LightsOutGame/: ClearPopup.module.css  ClearPopup.tsx  LightsOutGame.module.css  LightsOutGame.tsx
Next.js/LightsOut/components/LightsOutMenuBar/: LightsOutMenuBar.module.css  LightsOutMenuBar.tsx  ResizeButton.module.css  ResizeButton.tsx  ResizePopup.module.css  ResizePopup.tsx
Next.js/LightsOut/pages/: LightsOut.module.css  index.tsx
Next.js/Minesweeper/: README.md  package-lock.json
Next.js/Minesweeper/components/: MinesweepeCell.tsx  MinesweeperBoard.module.css  MinesweeperBoard.tsx  MinesweeperCell.module.css  MinesweeperCell.tsx  MinesweeperGame.module.css  MinesweeperGame.tsx  MinesweeperMenuBar.module.css
Next.js/Minesweeper/components/MinesweeperBoard/: MinesweeperBoard.tsx
Next.js/Minesweeper/components/MinesweeperCell/: MinesweeperCell.module.css  MinesweeperCell.tsx
Next.js/Minesweeper/components/MinesweeperGame/: MinesweeperGame.tsx
Next.js/Minesweeper/components/MinesweeperMenuBar/: MinesweeperMenuBar.module.css  MinesweeperMenuBar.tsx  ResizeButton.module.css  ResizeButton.tsx
Next.js/Minesweeper/pages/: index.tsx
Rust/: .gitignore  README.md
Rust/LightsOut/: Cargo.toml  README.md
Rust/LightsOut/src/: lights_out_cui.rs  lights_out_sys.rs  lights_out_ui.rs  main.rs
c++/: .gitignore  README.md
c++/LightsOut/: CMakeLists.txt  README.md  makefile
c++/LightsOut/include/: LightsOutCUI.hpp  LightsOutSys.hpp  LightsOutUI.hpp  LightsOutWxWidgets.hpp
c++/LightsOut/src/: CMakeLists.txt  LightsOut.cpp  LightsOutCUI.cpp  LightsOutSys.cpp  LightsOutWxWidgets.cpp
c++/Minesweeper/: CMakeLists.txt  README.md  makefile
c++/Minesweeper/include/: MinesweeperCUI.hpp  MinesweeperCell.hpp  MinesweeperSys.hpp  MinesweeperUI.hpp
c++/Minesweeper/src/: CMakeLists.txt  Minesweeper.cpp  MinesweeperCUI.cpp  MinesweeperCell.cpp  MinesweeperSys.cpp
c++/SlidePuzzle/: CMakeLists.txt  makefile
c++/SlidePuzzle/include/: SlidePuzzleCUI.hpp  SlidePuzzleSys.hpp  SlidePuzzleUI.hpp
c++/SlidePuzzle/src/: CMakeLists.txt  SlidePuzzle.cpp  SlidePuzzleCUI.cpp  SlidePuzzleSys.cpp
website/: .gitignore  README.md  package-lock.json  package.json  update_components.sh
website/src/components/LightsOut/LightsOutCell/: LightsOutCell.module.css  LightsOutCell.tsx
website/src/components/LightsOut/LightsOutGame/: LightsOutGame.module.css  LightsOutGame.tsx
website/src/components/LightsOut/LightsOutMenuBar/: ResizePopup.module.css  ResizePopup.tsx
website/src/components/Minesweeper/MinesweeperBoard/: MinesweeperBoard.module.css  MinesweeperBoard.tsx
website/src/components/Minesweeper/MinesweeperGame/: MinesweeperGame.module.css
website/src/components/Minesweeper/MinesweeperMenuBar/: MinesweeperMenuBar.tsx  ResizeButton.tsx
website/src/components/website/: closs-fade.tsx  header.module.css  header.tsx
website/src/components/website/header/: dropdown.module.css  dropdown.tsx  games_item.tsx  index.module.css  index.tsx  menu_narrow.module.css  menu_narrow.tsx  menu_wide.module.css  menu_wide.tsx
website/src/pages/: _app.tsx  _document.tsx  index.module.css  index.tsx
website/src/pages/play/: lightsout.tsx  minesweeper.tsx
